workshop03/myappv1-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappv1-deployment
  labels:
    name: myappv1-deployment
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      name: myappv1-pod
  template:
    metadata:
      labels:
        name: myappv1-pod
    spec:
      containers:
        - name: myappv1-container
          image: stackupiss/northwind-app:v1
          imagePullPolicy: Always
          ports:
            - name: myappv1-http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 16Mi
