workshop03/myappv2-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappv2-deployment
  labels:
    name: myappv2-deployment
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      name: myappv2-pod
  template:
    metadata:
      labels:
        name: myappv2-pod
    spec:
      containers:
        - name: myappv2-container
          image: stackupiss/northwind-app:v2
          imagePullPolicy: Always
          ports:
            - name: myappv2-http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 16Mi
