workshop03/mydb-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydb
  labels:
    name: mydb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mydb-pod
  template:
    metadata:
      labels:
        name: mydb-pod
    spec:
      volumes:
        - name: mydb-vol
          persistentVolumeClaim:
            claimName: mydb-pvc
#      initContainers:
#        - name: scrubc
#          image: busybox
#          command: ["/bin/sh", "-c", "test -e /scrub && rm -rf /scrub/..?* /scrub/.[!.]* /scrub/*  && test -z \"$(ls -A /scrub)\" || exit 1"]
#          volumeMounts:
#            - mountPath: /scrub
#              name: mydb-vol
      containers:
        - name: mydb-container
          image: stackupiss/northwind-db:v1
          imagePullPolicy: Always
          ports:
            - name: mydb-port
              containerPort: 3306
