workshop03/myappv2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myappv2-svc
spec:
  type: ClusterIP
  selector:
    name: myappv2-pod
  ports:
    - name: app-port
      port: 80
      targetPort: 3000
